--- a/app/vviews/ecommerce/pages/user/signup.ejs
+++ b/app/vviews/ecommerce/pages/user/signup.ejs
@@ -39,7 +39,7 @@
                               <input type="name" name="username" placeholder="" id="CustomerName" autocorrect="off" autocapitalize="off" autofocus="">
                             </div>
                         </div>
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                        <!-- <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <div class="form-group">
                               <label for="CustomerPhone">Phone</label>
                               <input type="phone" name="phone" placeholder="" id="CustomerPhone" autocorrect="off" autocapitalize="off" autofocus="">
@@ -50,7 +50,7 @@
                               <label for="CustomerAddress">Địa Chỉ</label>
                               <input type="address" name="address" placeholder="" id="CustomerAddress" autocorrect="off" autocapitalize="off" autofocus="">
                             </div>
-                        </div>
+                        </div> -->
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <div class="form-group">
                                 <label for="CustomerEmail">Email</label>
