--- a/app/vviews/ecommerce/elements/script.ejs
+++ b/app/vviews/ecommerce/elements/script.ejs
@@ -15,6 +15,7 @@
  <script src="/plugins/toastr/toastr.min.js"></script>
  <script src="/frontend/assets/js/sliderRange.js"></script>
  <script src="/frontend/assets/js/addwishlist.js"></script>
+ <script src="/frontend/assets/js/addtocart.js"></script>
  
  
 
