--- a/app/vviews/ecommerce/elements/script.ejs
+++ b/app/vviews/ecommerce/elements/script.ejs
@@ -14,8 +14,8 @@
  <script src="/adminlte/js/ajax.js"></script>
  <script src="/plugins/toastr/toastr.min.js"></script>
  <script src="/frontend/assets/js/sliderRange.js"></script>
- <script src="/frontend/assets/js/addwishlist.js"></script>
- <script src="/frontend/assets/js/addtocart.js"></script>
+ <!-- <script src="/frontend/assets/js/addwishlist.js"></script> -->
+ <script src="/frontend/assets/js/myJS.js"></script>
  
  
 
