--- a/app/vviews/ecommerce/pages/wishlist/index.ejs
+++ b/app/vviews/ecommerce/pages/wishlist/index.ejs
@@ -23,6 +23,9 @@
                                         <th class="product-subtotal text-center alt-font">Thêm Vào Giỏ Hàng</th>
                                     </tr>
                                 </thead>
+                                <tbody id="wishList">
+
+                                </tbody>
                             </table>
                         </div>
                     </form>                   
