--- a/app/vviews/ecommerce/pages/category/index.ejs
+++ b/app/vviews/ecommerce/pages/category/index.ejs
@@ -136,19 +136,19 @@
                         <div class="filters-toolbar-wrapper">
                             <div class="row">
                                 <div class="col-4 col-md-4 col-lg-4 text-left">
-                                    <header class="show-head d-flex flex-row-reverse flex-wrap justify-content-between mb-7">
+                                    <header class="show-head flex-row-reverse flex-wrap justify-content-between mb-7">
                                         <!-- sortGroup -->
                                         <div class="sortGroup">
-                                            <div class="d-flex flex-nowrap align-items-center">
-                                                <strong class="groupTitle mr-2">Sắp xếp theo:</strong>
+                                            <div class="d-flex flex-nowrap align-items-center left">
+                                                <span class="groupTitle mr-2">Sắp xếp theo:</span>
                                                 <div class="dropdown">
                                                     <button class="dropdown-toggle buttonReset" type="button" id="sortGroup"
                                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                         <span id="showSortText">Mặc định</span>
                                                     </button>
                                                     <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="sortGroup">
-                                                        <li><a href="/danh-muc/<%=idCategory%>?<%=paramPrice%>sort=price%2casc">Giá từ thấp đến cao</a></li>
-                                                        <li><a href="/danh-muc/<%=idCategory%>?<%=paramPrice%>sort=price%2cdesc">Giá từ cao đến thấp</a></li>
+                                                        <li><a href="/tat-ca-san-pham?<%=paramPrice%>sort=price%2casc">Giá từ thấp đến cao</a></li>
+                                                        <li><a href="/tat-ca-san-pham?<%=paramPrice%>sort=price%2cdesc">Giá từ cao đến thấp</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
