--- a/app/vviews/ecommerce/pages/listProduct/index.ejs
+++ b/app/vviews/ecommerce/pages/listProduct/index.ejs
@@ -1,5 +1,5 @@
 <% const collection="products" ; const folderUpload=`uploads/${collection}/`;
-    // let paramPrice = (queryPrice.maxPrice && queryPrice.minPrice) ? `minPrice=${queryPrice.minPrice}&maxPrice=${queryPrice.maxPrice}&` : ''
+    let paramPrice = (queryPrice.maxPrice && queryPrice.minPrice) ? `minPrice=${queryPrice.minPrice}&maxPrice=${queryPrice.maxPrice}&` : ''
 
 %>
 <% include ../../helpers/showProduct %>
@@ -52,6 +52,7 @@
                         <div class="widget-title">
                             <h2>Giá</h2>
                         </div>
+                        
                         <form id="filterForm" action="" method="get" class="filter-ranger-form">
                             <div id="slider-range"></div>
                             <input type="hidden" id="amount1" name="minPrice">
@@ -247,14 +248,24 @@
                                     <span class="filters-toolbar__product-count">Đang Hiển Thị: 22</span>
                                 </div> -->
                                 <div class="col-4 col-md-4 col-lg-4 text-left">
-                                    <strong class="groupTitle mr-2">Sắp xếp theo:</strong>
-                                    <div class="dropdown">
-                                        <button class="dropdown-toggle buttonReset" type="button" id="sortGroup"
-                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <span id="showSortText">Mặc định</span>
-                                        </button>
-
-                                    </div>
+                                    <header class="show-head flex-row-reverse flex-wrap justify-content-between mb-7">
+                                        <!-- sortGroup -->
+                                        <div class="sortGroup">
+                                            <div class="d-flex flex-nowrap align-items-center left">
+                                                <span class="groupTitle mr-2">Sắp xếp theo:</span>
+                                                <div class="dropdown">
+                                                    <button class="dropdown-toggle buttonReset" type="button" id="sortGroup"
+                                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                        <span id="showSortText">Mặc định</span>
+                                                    </button>
+                                                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="sortGroup">
+                                                        <li><a href="/tat-ca-san-pham?<%=paramPrice%>sort=price%2casc">Giá từ thấp đến cao</a></li>
+                                                        <li><a href="/tat-ca-san-pham?<%=paramPrice%>sort=price%2cdesc">Giá từ cao đến thấp</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </header>
                                 </div>
 
                             </div>
@@ -277,16 +288,18 @@
                                         <!-- end product image -->
     
                                         <!-- Start product button -->
-                                        <form class="variants add" action="#" onclick="window.location.href='cart.html'"method="post">
-                                            <button class="btn btn-addto-cart" type="button">THÊM VÀO GIỎ HÀNG</button>
+                                        <form class="variants add" action="#"method="post">
+                                            <a href="javascript:void(0);" class="addtocart" ><button data-product="product-<%= items.id %>" class="btn addtocart"  type="button" tabindex="0">THÊM GIỎ HÀNG</button></a>
+                                            <a href="javascript:void(0);" class="addtolove" ><button data-product="product-<%= items.id %>" class="btn addtolove"  type="button" tabindex="0">YÊU THÍCH</button></a>
+        
                                         </form>
-                                        <div class="button-set">
+                                        <!-- <div class="button-set">
                                             <div class="wishlist-btn">
                                                 <a class="wishlist add-to-wishlist" data-product="product-<%= items.id %>" href="javascript:void(0);" title="Add to Love">
                                                     <i class="icon anm anm-heart-l" data-product="product-<%= items.id %>"></i>
                                                 </a>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <!-- end product button -->
                                     </div>
                                     <!-- end product image -->
