wishlist and cart

--- a/app/vviews/ecommerce/pages/category/index.ejs
+++ b/app/vviews/ecommerce/pages/category/index.ejs
@@ -147,8 +147,8 @@
                                                         <span id="showSortText">Mặc định</span>
                                                     </button>
                                                     <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="sortGroup">
-                                                        <li><a href="/tat-ca-san-pham?<%=paramPrice%>sort=price%2casc">Giá từ thấp đến cao</a></li>
-                                                        <li><a href="/tat-ca-san-pham?<%=paramPrice%>sort=price%2cdesc">Giá từ cao đến thấp</a></li>
+                                                        <li><a href="/danh-muc/<%=idCategory%>?<%=paramPrice%>sort=price%2casc">Giá từ thấp đến cao</a></li>
+                                                        <li><a href="/danh-muc/<%=idCategory%>?<%=paramPrice%>sort=price%2cdesc">Giá từ cao đến thấp</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
