--- a/app/vviews/ecommerce/pages/cart/index.ejs
+++ b/app/vviews/ecommerce/pages/cart/index.ejs
@@ -25,7 +25,7 @@
                     		<tbody id="CartList">
 
                             </tbody>
-                    		<tfoot>
+                    		<!-- <tfoot>
                                 <tr>
                                     <td colspan="3" class="text-left"><a href="/" class="btn btn-secondary btn--small cart-continue">Tiếp Tục Mua Sắm</a></td>
                                     <td colspan="3" class="text-right">
@@ -33,7 +33,7 @@
                                     	<button type="submit" name="update" class="btn btn-secondary btn--small cart-continue ml-2">Cập Nhật</button>
                                     </td>
                                 </tr>
-                            </tfoot>
+                            </tfoot> -->
                     </table>
                     
                     <!-- <div class="currencymsg">We processes all orders in USD. While the content of your cart is currently displayed in USD, the checkout will use USD at the most current exchange rate.</div> -->
